Add unit tests, factory