@@ -6,18 +6,18 @@ import by.issoft.store.sorting.comparator.PriceComparator;
 import by.issoft.store.sorting.comparator.RateComparator;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class StoreComparator {
     public static final String ASCENDING = "asc";
     public static final int TOP_FIVE = 5;
 
-    public void sortProducts(List<Product> products, Map<String, String> typeOrderMap) {
+    public List<Product> sortProducts(List<Product> products, Map<String, String> typeOrderMap) {
         List<Product> productList = new ArrayList<>(products);
         for (Map.Entry<String, String> entry : typeOrderMap.entrySet()) {
             productList.sort(chooseComparator(entry));
             System.out.println("by " + entry.getKey() + " " + entry.getValue() + ": \n" + productList);
         }
+        return productList;
     }
 
     protected Comparator<Product> chooseComparator(Map.Entry<String, String> entry) {
@@ -40,12 +40,13 @@ public class StoreComparator {
                 RuntimeException("Exception while choosing comparator");
     }
 
-    public void topProducts(List<Product> products) {
+    public List<Product> topProducts(List<Product> products) {
         System.out.println("Selecting top 5 by price descending...");
-        System.out.println(products.stream()
-                .sorted(new PriceComparator().reversed())
-                .limit(TOP_FIVE)
-                .collect(Collectors.toList()));
+        List<Product> productList = products.stream()
+            .sorted(new PriceComparator().reversed())
+            .limit(TOP_FIVE).toList();
+        System.out.println(productList);
+        return productList;
     }
 
     protected boolean checkValue(String value) {
